[tool.poetry]
name = "book_service"
version = "0.1.0"
description = ""
authors = ["Viliam Serecun <viliam.serecun@jumio.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
flask-restx = "^0.5.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
